package edu.utfpr.cp.dacom.sa.soilcorrection.correcao;

import edu.utfpr.cp.dacom.sa.soilcorrection.fonte.FonteFosforo;

public class CorrecaoFosforo
    implements 
        ICorrecaoNutriente<FonteFosforo>,
        ICorrecaoNutrienteQuantidadeAplicar<FonteFosforo> {
    
}
