package edu.utfpr.cp.dacom.sa.soilcorrection.nutriente;

public enum NomeNutrienteAdicional {
    ENXOFRE,
    CALCIO,
    NITROGENIO,
    MAGNESIO;
    
}
